--- a/guanlian/guanlian.html
+++ b/guanlian/guanlian.html
@@ -349,7 +349,7 @@
                 <span class="tag">
                     近期热点
                 </span>
-                <img class="close" src="./close.png" alt="close">
+                <img class="close" src="close.png" alt="close">
             </div>
         </div>
 
@@ -368,7 +368,7 @@
                 <span class="tag">
                     近期热点
                 </span>
-                <img  class="close"  src="./close.png" alt="close">
+                <img class="close" src="close.png" alt="close">
             </div>
         </div>
 
