--- a/guanlian/guanlian.html
+++ b/guanlian/guanlian.html
@@ -163,28 +163,28 @@
             display: -webkit-box;
             margin: 12.5px 0 15px;
             width: auto;
-            height: 15px;
+            height: 40px;
             font-size: 14px;
             color: #333;
             letter-spacing: 0;
-            line-height: 15px;
+            line-height: 20px;
             overflow : hidden;
             text-overflow: ellipsis;
-            -webkit-line-clamp: 1;
+            -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
         }
         #related .hottest .mainContent .author {
             display: -webkit-box;
             margin: 0;
             width: auto;
-            height: 26px;
+            height: 13px;
             font-size: 12px;
             color: #666;
             letter-spacing: 0;
             line-height: 12px;
             overflow : hidden;
             text-overflow: ellipsis;
-            -webkit-line-clamp: 2;
+            -webkit-line-clamp: 1;
             -webkit-box-orient: vertical;
         }
         #related .hottest .mainContent .date {
@@ -222,6 +222,7 @@
         }
         /* ads */
         #related .ads {
+            position: relative;
             display: block;
             padding: 15px 18px;
             width: 100%;
@@ -229,11 +230,19 @@
             border-bottom: 1px solid #EBEBEB;
             box-sizing: border-box;
         }
-        #related .ads img {
+        #related .ads .adsContent {
             display: block;
             width: 100%;
             height: 100%;
             background-color: #EBEBEB;
+        }
+        #related .ads #adsTag {
+            position: absolute;
+            width: 36px;
+            height: 35px;
+            top: 15px;
+            left: 18px;
+            z-index: 10;
         }
         /* transfer */
         #related .transfer {
@@ -256,7 +265,7 @@
             margin-top: 5px;
             width: 50px;
             font-size: 12px;
-            color: #5881B2;
+            color: #333;
             letter-spacing: 0;
             text-align: center;
             line-height: 13px;
@@ -271,7 +280,7 @@
             line-height: 13px;
         }
         #related .transfer .midBorder {
-            margin: 0 20px 0 15px;
+            margin: 0 15px;
             height: 100%;
             border-right: 1px solid #EBEBEB;
         }
@@ -347,7 +356,7 @@
             </div>
             <div class="bottomPart">
                 <span class="tag">
-                    近期热点
+                    猜你喜欢
                 </span>
                 <img class="close" src="close.png" alt="close">
             </div>
@@ -374,7 +383,8 @@
 
         <!--/* ads */-->
         <div class="ads">
-            <img src="" alt="">
+            <img class="adsContent" src="" alt="">
+            <img id="adsTag" src="adsTag.png" alt="">
         </div>
 
         <!--/* Transfer  */-->
@@ -384,9 +394,13 @@
                 <div class="name">小张震</div>
                 <div class="company">光大证券</div>
             </div>
-            <div class="midBorder">
+
+            <div class="midBorder"></div>
+
+            <div>
 
             </div>
+
         </div>
 
         <!--/* report  */-->
