--- a/writeComment/writeComment.html
+++ b/writeComment/writeComment.html
@@ -314,7 +314,7 @@
                     } else {
                         document.getElementById("note").innerText = "8分"
                     }
-                } else {
+                } else if (starNum == 4)  {
                     document.getElementById("redComment").innerText = redComment[4];
                     if (starSrc !== "starHalf.png") {
                         document.getElementById("note").innerText = "9分"
