--- a/guanlian/guanlian.html
+++ b/guanlian/guanlian.html
@@ -284,6 +284,20 @@
             height: 100%;
             border-right: 1px solid #EBEBEB;
         }
+        #related .transfer .detail .detailContent {
+            display: -webkit-box;
+            margin: 11px 0 7px 0;
+            width: 100%;
+            font-size: 14px;
+            color: #333333;
+            letter-spacing: 0;
+            text-align: justify;
+            line-height: 18.5px;
+            overflow : hidden;
+            text-overflow: ellipsis;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
         /* report */
         #related .report {
             display: block;
@@ -397,8 +411,11 @@
 
             <div class="midBorder"></div>
 
-            <div>
-
+            <div class="detail">
+                <div></div>
+                <p class="detailContent">
+                    理由：该股票连续10天占组合总资产的比重高于30%，出发系统自动调仓该股票连续10天占组合总资产的比重高于30%，出发系统自动调仓
+                </p>
             </div>
 
         </div>
