--- a/writeComment/writeComment.html
+++ b/writeComment/writeComment.html
@@ -105,14 +105,14 @@
             height: 58px;
             border: 1px solid #999999;
             border-radius: 2px;
-            overflow: scroll;
+            overflow: auto;
             resize: none;
             box-sizing: border-box;
         }
         #writeComment #commentWindow #commentArea::-webkit-input-placeholder {
             font-size: 10px;
             color: #999;
-            ine-height: 11px;
+            line-height: 11px;
         }
         #writeComment #commentWindow #commentArea::-moz-placeholder {   /* Mozilla Firefox 19+ */
             font-size: 10px;
